# jarvis

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: pr-build.yml  release.yml
src/: main.rs  terminal.rs
